Added method level annotation for role bassed authentication over doctor module