@@ -1,5 +1,7 @@
 package com.healthcare.backend.security.filter;
 
+import com.healthcare.backend.entity.User;
+import com.healthcare.backend.repository.UserRepository;
 import com.healthcare.backend.security.jwt.JwtUtil;
 
 import jakarta.servlet.FilterChain;
@@ -15,71 +17,77 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtUtil jwtUtil;
+    private final UserRepository userRepository;
 
-    public JwtAuthenticationFilter(JwtUtil jwtUtil) {
+    public JwtAuthenticationFilter(
+            JwtUtil jwtUtil,
+            UserRepository userRepository) {
+
         this.jwtUtil = jwtUtil;
+        this.userRepository = userRepository;
     }
-
 
     @Override
     protected void doFilterInternal(
             HttpServletRequest request,
             HttpServletResponse response,
-            FilterChain filterChain
-    ) throws ServletException, IOException {
+            FilterChain filterChain)
+            throws ServletException, IOException {
 
         String authHeader = request.getHeader("Authorization");
 
-
         // No JWT token
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-
             filterChain.doFilter(request, response);
             return;
         }
 
-
-        // Remove "Bearer " from the beginning
+        // Remove "Bearer " from the token
         String token = authHeader.substring(7);
-
 
         try {
 
-            // Extract email and role from JWT
+            // Extract email from JWT
             String email = jwtUtil.extractEmail(token);
-            String role = jwtUtil.extractRole(token);
 
+            // Find user from database
+            User user = userRepository.findByEmail(email)
+                    .orElseThrow(() ->
+                            new RuntimeException("User not found")
+                    );
 
-            // Convert role into Spring Security authority
-            SimpleGrantedAuthority authority =
-                    new SimpleGrantedAuthority("ROLE_" + role);
+            // Get user's role
+            String role = user.getRole().name();
 
-
-            // Create authenticated user
+            // Create authentication with user's role
             UsernamePasswordAuthenticationToken authentication =
                     new UsernamePasswordAuthenticationToken(
                             email,
                             null,
-                            List.of(authority)
+                            Collections.singletonList(
+                                    new SimpleGrantedAuthority(
+                                            "ROLE_" + role
+                                    )
+                            )
                     );
 
-
-            // Store authentication in SecurityContext
+            // Put authentication into Spring Security context
             SecurityContextHolder.getContext()
                     .setAuthentication(authentication);
 
         } catch (Exception e) {
 
+            // Invalid JWT or user not found
             SecurityContextHolder.clearContext();
         }
 
-
+        // Continue request
         filterChain.doFilter(request, response);
     }
 }
